--- a/templates/board.html
+++ b/templates/board.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href=" {{ url_for('static', filename='style.css') }}">
-
+	<link href= {{  url_for('static', filename='landing-page.min.css' )  }} rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href= {{  url_for('static', filename='style.css' )  }}>
     <title>ConnectFour Game</title>
 	</head>
 	<body>
@@ -19,12 +19,14 @@
 			If you're reading this, audio isn't supported. 
 		</audio>
 	</div>
+
 	
 	<div class="alert hide alert-primary" id="gameresult">
 		<button type="button" class="close" data-dismiss="alert">x</button>
 		<p id="whowin"></p>
 	</div>
 
+	<div class="center_padding">
 	<table id="gamegrid" class="table table-bordered col col-md-4" align="center">
 	  <thead>
 		<tr>
@@ -95,32 +97,50 @@
 	  </tbody>
 	</table>
 	
+	
 	<div align="center">
 		<button id="restartbtn" type="button" class="btn btn-success" >New Game!!</button>
-		<button id="musiccontrol" type="button" class="btn btn-primary">Stop Music</button>
+		<button id="musiccontrol" type="button" class="btn btn-primary">Pause Music</button>
 	</div>
-    <!-- Optional JavaScript -->		
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+	</div>
+	
+	<footer class="footer bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+        </div>
+        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+          <ul class="list-inline mb-0">
+			<p class="text-muted large">Wong, Yat Man  (2019/3/28)</p>
+          </ul>
+        </div>
+      </div>
+    </div>
+	</footer>
+
+
+	<!-- Optional JavaScript -->		
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 	<!--Real jQuery-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	
+
 	<script>window.jQuery || document.write('<script src="{{
 		url_for('static', filename='jquery.js') }}">\x3C/script>')
 	</script>
-	
-	
+
+
 	<script type=text/javascript>
 		$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 	</script>
-	
+
 	<script src= {{  url_for('static', filename='handle.js' )  }}></script>
 
 	<!-- End importing--> 
- 
- 
-  </body>
+
+	</body>
+  
 </html>
